apps/rust/api-rest/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api-rest
#  namespace: mussia30
  labels:
    app: rust-api-rest
    version: v1
spec:
  replicas: 1

  template:
    metadata:
      name: rust-api-rest
      labels:
        app: rust-api-rest
        version: v1
      annotations:
        "linkerd.io/inject": "enabled"
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service": "rust-api-rest"
        "consul.hashicorp.com/connect-service-protocol": "http"
        "consul.hashicorp.com/service-meta-version": "v.1.1"
        "prometheus.io/scrape": "true"
        "prometheus.io/port": "9102"
    spec:
      serviceAccountName: rust-api-rest
      containers:
        - name: go-api-rest
          #          image: europe-west1-docker.pkg.dev/maya-mussia/nx-go-playground/go-api-rest:latest
          image: yurikrupnik/rust-api-rest:latest
          imagePullPolicy: IfNotPresent
          #          command: [ "rust", "main.js" ]
          #            - rust
          #            - main.js
      restartPolicy: Always
  selector:
    matchLabels:
      app: rust-api-rest
      version: v1
