apps/rust/api-rest/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-rest-service
  labels:
    run: rust-api-rest-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rust-api-rest
